--- a/requirements.txt
+++ b/requirements.txt
@@ -10,11 +10,12 @@ email-validator==2.1.0.post1
 aiosmtplib==4.0.0
 redis==5.0.1
 python-dotenv==1.0.1
-pytest==8.0.1
+pytest==8.0.0
 httpx==0.26.0
 pytest-asyncio==0.23.5
 pytest-cov==4.1.0
 black==24.1.1
 isort==5.13.2
 mypy==1.8.0
-flake8==7.0.0 
+flake8==7.0.0
+psycopg2-binary==2.9.9 
