--- a/alembic.ini
+++ b/alembic.ini
@@ -3,7 +3,7 @@
 [alembic]
 # path to migration scripts
 # Use forward slashes (/) also on windows to provide an os agnostic path
-script_location = alembic
+script_location = migrations
 
 # template used to generate migration file names; The default value is %%(rev)s_%%(slug)s
 # Uncomment the line below if you want the files to be prepended with date and time
@@ -48,7 +48,7 @@ sourceless = false
 # are written from script.py.mako
 output_encoding = utf-8
 
-sqlalchemy.url = sqlite:///./test.db
+sqlalchemy.url = driver://user:pass@localhost/dbname
 
 
 [post_write_hooks]
